--- a/templates/master.html
+++ b/templates/master.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="row">
+    <div class="container">
         <div class="col-sm-2">
             this is just a test
         </div>
@@ -22,7 +22,7 @@
         </div>
         {% include "partials/footer.html" %}
     </div>
-    <div class="content">
+    <div class="container">
         {% block content %}
         {% endblock %}
     </div>
