--- a/templates/master.html
+++ b/templates/master.html
@@ -15,17 +15,18 @@
 <body>
     <div class="container">
         <div class="col-sm-2">
-            this is just a test
+            {% include "partials/navbar.html" %}
         </div>
         <div class="col-sm-8">
-            this another test
+            {% include "partials/sidebar.html" %}
         </div>
-        {% include "partials/footer.html" %}
+
     </div>
     <div class="container">
         {% block content %}
         {% endblock %}
     </div>
+    {% include "partials/footer.html" %}
     {% block js %}
     {% endblock %}
 </body>
