--- a/templates/master.html
+++ b/templates/master.html
@@ -14,12 +14,10 @@
 
 <body>
     <div class="container">
-        <div class="col-sm-2">
             {% include "partials/navbar.html" %}
-        </div>
-        <div class="col-sm-8">
+        {% comment %} <div class="col-sm-8">
             {% include "partials/sidebar.html" %}
-        </div>
+        </div> {% endcomment %}
 
     </div>
     <div class="container">
