--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -3,3 +3,4 @@
 </div>
 {% load static %}
 <script src="{% static 'vue/dist/vue.min.js' %}"></script>
+<script src="{% static 'vue/dist/vue.min.js' %}"></script>
