preliminary work on register user

--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
         </form>
     </div>
     <div class="row">
-         <a href="/register">
+         <a href="{%url 'register' %}">
             <button type="submit" onclick="preventDefault" class="btn btn-info">Register</button>
         </a>
     </div>
