seperation of register get and post in views

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,8 @@
    
     <div class="login-form col-md-4">
         <h4>Login</h4>
-        <form>
+        <form method="post" action="/user/login">
+        {% csrf_token %}
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
