--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -52,7 +52,10 @@
 	<p class="divider-text">
         <span class="bg-light">OR</span>
     </p>
+
+    <!--REgister user form-->
 	<form action="/user/register/" method="post">
+     {% csrf_token %}
 	<div class="form-group input-group">
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
