--- a/templates/master.html
+++ b/templates/master.html
@@ -20,6 +20,13 @@
         </div> {% endcomment %}
 
     </div>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     <div class="container">
         {% block content %}
         {% endblock %}
